Fixed the image thumbnail ratio when viewing site on mobile

--- a/css/responsive-stylesheet.css
+++ b/css/responsive-stylesheet.css
@@ -214,7 +214,7 @@ html body {
 
 	.project-thumbnail {
 		max-width: 100%;
-		height: inherit;
+		object-fit: cover;
 	}
 
 	.col-description {
